# cpp_template

./: .clang-format  .gitignore  .lgtm.yml  CMakeLists.txt  CMakePresets.json  README.md
configured_files/: config.hpp.in
src/: CMakeLists.txt  main.cpp
src/intro/: CMakeLists.txt
test/: CMakeLists.txt
test/catch2/: CMakeLists.txt  catch2_tests.cpp
test/catch2/intro/: catch2_test_intro.cpp
test/gtest/: CMakeLists.txt
